--- a/Index.html
+++ b/Index.html
@@ -29,8 +29,7 @@
         
         This project looks at evolution of indian notes 
     </p>
-    <img src="https://www.gettyimages.com/gi-resources/images/500px/983703508.jpg">
-</img>
+    <img src="Demonitization was ugly and colourful.svg">
     </body>
 
 
